[package]
name = "hojo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bincode = "1.3.3"
byteorder = { workspace = true }
pyo3 = { workspace = true }
serde = { workspace = true }

[profile.release]
debug = true

[profile.release-no-debug]
inherits = "release"
debug = false


